--- a/web/WebContent/css/style.css
+++ b/web/WebContent/css/style.css
@@ -206,3 +206,12 @@ input:-ms-input-placeholder {
 div.form {
 	background: white;
 }
+
+.wizardpanel {
+	height: 200px;
+}
+
+.ui-wizard-nav-next,.ui-wizard-nav-back {
+	background-color: #186ba0!important;
+	border: 1px solid #156090!important;
+}
