--- a/web/WebContent/WEB-INF/templates/header.xhtml
+++ b/web/WebContent/WEB-INF/templates/header.xhtml
@@ -10,7 +10,7 @@
 <body>
 	<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
 	<a class="navbar-brand" href="#{navigationView.navigationIndex}"><h:graphicImage
-			width="20" value="./../images/homeicon.png" /></a>
+			width="35" value="./../images/favicon.ico" /></a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse"
 		data-target="#navbarsExampleDefault"
 		aria-controls="navbarsExampleDefault" aria-expanded="false"
